--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,15 @@
 name: CI
 
-on: [push, pull_request, workflow_dispatch]
+on: 
+  push:
+  pull_request:
+  workflow_dispatch:
+    inputs:
+      deploy:
+        description: 'Enable deployment'
+        required: true
+        default: true
+        type: boolean
 
 permissions:
   checks: write
@@ -29,3 +38,28 @@ jobs:
       if: always()
       with:
         files: 'reports/*.xml'
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: [ build ]
+
+    if: inputs.deploy == true
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: build
+          path: public
+
+      - name: Configure AWS access
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::530798195059:role/tng-curriculum-cicd-playground-deployment-test-role
+          aws-region: eu-central-1
+          audience: sts.amazonaws.com
+          role-session-name: cicd-playground-deployment
+
+      - name: Deploy
+        run: aws s3 cp ./public s3://cicd-workshop-playground/${GITHUB_REPOSITORY_OWNER} --recursive
