--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,27 +46,50 @@ jobs:
         path: public
         retention-days: 1
 
+  # deploy:
+  #   runs-on: ubuntu-latest
+
+  #   needs: [ build ]
+
+  #   if: inputs.deploy == true
+  #   steps:
+  #     - uses: actions/checkout@v3
+
+  #     - uses: actions/download-artifact@v3
+  #       with:
+  #         name: build
+  #         path: public
+
+  #     - name: Configure AWS access
+  #       uses: aws-actions/configure-aws-credentials@v2
+  #       with:
+  #         role-to-assume: arn:aws:iam::530798195059:role/tng-curriculum-cicd-playground-deployment-test-role
+  #         aws-region: eu-central-1
+  #         audience: sts.amazonaws.com
+  #         role-session-name: cicd-playground-deployment
+
+  #     - name: Deploy
+  #       run: aws s3 cp ./public s3://cicd-workshop-playground/${GITHUB_REPOSITORY_OWNER} --recursive
+
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     needs: [ build ]
-
-    if: inputs.deploy == true
     steps:
-      - uses: actions/checkout@v3
-
       - uses: actions/download-artifact@v3
         with:
           name: build
           path: public
-
-      - name: Configure AWS access
-        uses: aws-actions/configure-aws-credentials@v2
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          role-to-assume: arn:aws:iam::530798195059:role/tng-curriculum-cicd-playground-deployment-test-role
-          aws-region: eu-central-1
-          audience: sts.amazonaws.com
-          role-session-name: cicd-playground-deployment
-
-      - name: Deploy
-        run: aws s3 cp ./public s3://cicd-workshop-playground/${GITHUB_REPOSITORY_OWNER} --recursive
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+      
