--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: [ build ]
+    if: inputs.deploy == true
     steps:
       - uses: actions/download-artifact@v3
         with:
