--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,47 +30,22 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install
       run: yarn
-    # - name: Unit tests
-    #   run: yarn test
+    - name: Unit tests
+      run: yarn test
     - name: Build
       run: yarn build
-    # - name: Integration tests
-    #   run: yarn test:e2e
-    # - name: Collect test reports
-    #   uses: EnricoMi/publish-unit-test-result-action@v1
-    #   if: always()
-    #   with:
-    #     files: 'reports/*.xml'
+    - name: Integration tests
+      run: yarn test:e2e
+    - name: Collect test reports
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      if: always()
+      with:
+        files: 'reports/*.xml'
     - uses: actions/upload-artifact@v3
       with:
         name: build
         path: public
         retention-days: 1
-
-  # deploy:
-  #   runs-on: ubuntu-latest
-
-  #   needs: [ build ]
-
-  #   if: inputs.deploy == true
-  #   steps:
-  #     - uses: actions/checkout@v3
-
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: build
-  #         path: public
-
-  #     - name: Configure AWS access
-  #       uses: aws-actions/configure-aws-credentials@v2
-  #       with:
-  #         role-to-assume: arn:aws:iam::530798195059:role/tng-curriculum-cicd-playground-deployment-test-role
-  #         aws-region: eu-central-1
-  #         audience: sts.amazonaws.com
-  #         role-session-name: cicd-playground-deployment
-
-  #     - name: Deploy
-  #       run: aws s3 cp ./public s3://cicd-workshop-playground/${GITHUB_REPOSITORY_OWNER} --recursive
 
   deploy:
     environment:
