enable test reports

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,11 @@ jobs:
       run: yarn build
     - name: Integration tests
       run: yarn test:e2e
-    # - name: Collect test reports
-    #   uses: EnricoMi/publish-unit-test-result-action@v1
-    #   if: always()
-    #   with:
-    #     files: 'reports/*.xml'
+    - name: Collect test reports
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      if: always()
+      with:
+        files: 'reports/*.xml'
     - uses: actions/upload-artifact@v3
       with:
         name: build
