--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       run: yarn test:e2e
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2.20.0
+      if: always()
       with:
         files: "**/reports/**/*.xml"
               
